--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="apple-touch-icon" href="https://multidao.netlify.app/logo192.png">
     <link rel="manifest" href="https://multidao.netlify.app/manifest.json">
     <title>Eesee Testnet Airdrop</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="main.ce24d948.chunk.css" rel="stylesheet">
 </head>
 
@@ -30,7 +31,7 @@
                 <p>You are not connected to discord. Please use this link to connect: <a href="https://discord.com/api/oauth2/authorize?client_id=1018299383286075405&amp;redirect_uri=https%3A%2F%2Fmultidao.netlify.app%2F&amp;response_type=token&amp;scope=identify" target="_blank">Connect Discord</a></p>
                 <h2>Your Airdrop point: 0
                 </h2>
-                <p id="status" style="color:rgb(63 62 62 / 82%);"># You must install Metamask, a virtual
+                <p id="status" style="color:rgb(63 62 62 / 82%);">🦊 You must install Metamask, a virtual
                     Ethereum wallet, in your browser.</p>
                 <p id="status" style="color:rgb(63 62 62 / 82%);"></p>
                 <p id="chainid">🔴 Please connect to Testnet</p>
