--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>You are not connected to discord. Please use this link to connect: <a href="https://discord.com/api/oauth2/authorize?client_id=1018299383286075405&amp;redirect_uri=https%3A%2F%2Fmultidao.netlify.app%2F&amp;response_type=token&amp;scope=identify" target="_blank">Connect Discord</a></p>
                 <h2>Your Airdrop point: 0
                 </h2>
-                <p id="status" style="color:rgb(63 62 62 / 82%);">&#x1F98A; You must install Metamask, a virtual
+                <p id="status" style="color:rgb(63 62 62 / 82%);">&#x1F98A; Kindly install Metamask, a virtual
                     Ethereum wallet, in your browser.</p>
                 <p id="status" style="color:rgb(63 62 62 / 82%);"></p>
                 <p id="chainid">🔴 Please connect to Testnet</p>
